--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="margin-top-lg">
   <div class="container">
     <div class="clearfix">
       <span class="pull-left"><%= t ".content" %></span>
