--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,47 @@
-<h2><%= t ".new" %></h2>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div class="card padding-md margin-top-md">
+      <h2 class="text-center"><%= t ".new" %></h2>
+      <%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
+        <%= devise_error_messages! %>
 
-<%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
-  <%= devise_error_messages! %>
+        <div class="form-group">
+          <%= f.text_field :username, class: "form-control",
+            placeholder: t("fuser") %>
+        </div>
 
-  <div class="field">
-    <%= f.text_field :username, size: 70, placeholder: t("fuser") %><br/>
-    <%= f.email_field :email, size: 70, placeholder: t("femail"),
-      autofocus:true %><br/>
-    <%= f.telephone_field :phone_number, :size => 70,
-      placeholder: t("fphone")%><br/>
-    <%= f.password_field :password, size: 70, placeholder: t("fpass"),
-      autocomplete: "off" %><br/>
-    <%= f.password_field :password_confirmation, size: 70,
-      placeholder: t("fnpass"), autocomplete: "off" %><br/>
-    <%= f.file_field :image %>
-    <%= f.submit t(".new") %><br/>
-    <%= render "devise/shared/links" %>
+        <div class="form-group">
+          <%= f.email_field :email, class: "form-control",
+            placeholder: t("femail"), autofocus:true %>
+        </div>
+
+        <div class="form-group">
+          <%= f.telephone_field :phone_number, class: "form-control",
+            placeholder: t("fphone")%>
+        </div>
+
+        <div class="form-group">
+          <%= f.password_field :password, class: "form-control",
+            placeholder: t("fpass"), autocomplete: "off" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.password_field :password_confirmation, class: "form-control",
+            placeholder: t("fnpass"), autocomplete: "off" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.file_field :image %>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit t(".new"), class: "btn btn-success btn-block" %>
+        </div>
+
+        <%= render "devise/shared/links" %>
+      <% end %>
+    </div>
   </div>
-<% end %>
+  <div class="col-md-3"></div>
+</div>
