--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,10 +1,11 @@
 <%- if devise_mapping.registerable? && controller_name != "registrations" %>
-  <%= link_to t(".linkto2"), new_registration_path(resource_name) %><br />
+  <%= link_to t(".linkto2"), new_registration_path(resource_name),
+    class: "btn btn-danger btn-block" %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != "passwords" &&
       controller_name != "registrations" %>
-  <%= link_to t(".linkto6"), new_password_path(resource_name) %><br />
+  <%= link_to t(".linkto6"), new_password_path(resource_name), class: "text-center" %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != "confirmations" %>
