--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -4,23 +4,25 @@
       <div class="primary-content">
         <div class="row">
           <div class="col-sm-12">
-            <%= form_for @feedback do |f| %>
-              <%= render "shared/error_messages", object: f.object %>
+            <div class="card padding-md">
+              <%= form_for @feedback do |f| %>
+                <%= render "shared/error_messages", object: f.object %>
 
-              <div class="form-group">
-                <%= f.label :subject %>
-                <%= f.text_field :subject, class: "form-control" %>
-              </div>
+                <div class="form-group">
+                  <%= f.label :subject %>
+                  <%= f.text_field :subject, class: "form-control" %>
+                </div>
 
-              <div class="form-group">
-                <%= f.label :content %>
-                <%= f.text_area :content, class: "form-control", size: "80x8" %>
-              </div>
+                <div class="form-group">
+                  <%= f.label :content %>
+                  <%= f.text_area :content, class: "form-control", size: "80x8" %>
+                </div>
 
-              <div class="form-group">
-                <%= f.submit class: "btn btn-success" %>
-              </div>
-            <% end %>
+                <div class="form-group">
+                  <%= f.submit class: "btn btn-success" %>
+                </div>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
