--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,20 +1,27 @@
 <header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
     <%= link_to t("logo"), root_path, class: "logo" %>
-    <%= form_tag users_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
-      <p>
-        <%= text_field_tag :search, params[:search], class: "form-control",
-            placeholder: "Search...", id: "search", autocomplete: "off" %>
-        <%= submit_tag "Search", class: "btn btn-default" %>
-      </p>
-    <% end %>
+
     <nav>
+      <ul class="nav navbar-nav">
+        <%= form_tag users_path, method: :get, class: "navbar-form margin-left-md", role: "search" do %>
+          <div class="input-group">
+            <%= text_field_tag :search, params[:search], class: "form-control",
+            placeholder: "Search...", id: "search", autocomplete: "off" %>
+            <span class="input-group-btn">
+              <%= submit_tag "Search", class: "btn btn-default" %>
+            </span>
+          </div>
+        <% end %>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <% if can? :read, User %>
             <li><%= link_to t(".users"), users_path %></li>
           <% end %>
-          <li class="cart-text"><%= render "layouts/cart_text" %></li>
+          <% if current_user.role != "admin" %>
+            <li class="cart-text"><%= render "layouts/cart_text" %></li>
+          <% end %>
           <li class="dropdown">
             <a href = "#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t ".account" %><b class="caret"></b></a>
@@ -58,4 +65,3 @@
     </nav>
   </div>
 </header>
-
