--- a/app/views/orders/_order_row.html.erb
+++ b/app/views/orders/_order_row.html.erb
@@ -1,7 +1,12 @@
-<div class="well">
+<div class="card padding-md margin-top-sm">
   <div class="row">
     <div class="col-xs-8">
+      <div class="col-xs-3">
+      <%= image_tag product.product_image.url(:thumb), class: "img-thumbnail pull-left margin-right-md" %>
+      </div>
+      <div class="col-xs-6">
       <h4><%= product.title %></h4>
+      </div>
     </div>
     <div class="col-xs-4">
       <%= form_for order_item, remote: true do |f| %>
@@ -16,7 +21,7 @@
           </div>
           <div class="col-xs-8 text-right">
             <div class="btn-group">
-              <%= f.submit t(".update"), class: "btn btn-primary" %>
+              <%= f.submit t(".update"), class: "btn btn-success" %>
               <%= link_to t(".delete"), order_item,
                 data: {confirm: raw(t ".confirm",
                   order: order_item.product.title)},
