--- a/app/views/orders/_order_shopping.html.erb
+++ b/app/views/orders/_order_shopping.html.erb
@@ -1,15 +1,14 @@
-<% if !order_item.nil? && order_item.errors.any? %>
+<!-- <%# if !order_item.nil? && order_item.errors.any? %>
   <div class="alert alert-danger">
     <ul>
-    <% order_item.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
+    <%# order_item.errors.full_messages.each do |msg| %>
+      <li><%#= msg %></li>
+    <%# end %>
     </ul>
   </div>
-<% end %>
+<%# end %> -->
 <p><%= link_to t("continue_shopping"), root_path,
       class: "btn btn-danger btn-lg" %></p>
-<% order_items.each do |order_item| %>
-  <%= render "orders/order_row", product: order_item.product,
-    order_item: order_item, show_total: true %>
+<% @order_items.each do |order_item| %>
+  <%= render "orders/order_row", product: order_item.product, order_item: order_item, show_total: true %>
 <% end %>
