--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,5 @@
 <div class="main">
   <div class="shopping-cart">
-    <%= render "order_shopping", order_item: @order_item,
-      order_items: @order_items %>
+    <%= render "order_shopping" %>
   </div>
 </div>
