--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,24 @@
 <% provide :title, t(".title") %>
-<h1><%= t ".content2" %></h1>
-<br/>
-<%= will_paginate %>
-  <ol class="users">
-    <%= render @users %>
-  </ol>
-<%= will_paginate %>
+<div class="row">
+  <div class="col-md-12">
+    <div class="card padding-md margin-top-md">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Avatar</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Rating</th>
+            <th>Role</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render @users %>
+        </tbody>
+      </table>
+      <%= will_paginate %>
+    </div>
+  </div>
+</div>
+
