--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,5 @@
 <div class="main">
   <div class="shopping-cart">
-    <%= render "order_shopping" %>
+    <%= render "order_shopping", order_items: @order_items %>
   </div>
 </div>
