--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,8 +1,12 @@
 <%= form_for [:admin, category] do |f| %>
   <%= render "shared/error_messages", object: f.object %>
 
-  <%= f.label t ".name" %>
-  <%= f.text_field :name, class: "form-control" %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
 
-  <%= f.submit class: "btn btn-primary" %>
+  <div class="form-group">
+    <%= f.submit class: "btn btn-info" %>
+  </div>
 <% end %>
