--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,7 +1,9 @@
 <div class="main">
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= render "form", category: @category %>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="card padding-md">
+        <%= render "form", category: @category %>
+      </div>
+    </div>
   </div>
-</div>
 </div>
