--- a/app/views/admin/feedbacks/index.html.erb
+++ b/app/views/admin/feedbacks/index.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="main">
-    <div class="col-md-9">
-      <div class="primary-content">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+      <div class="card padding-md">
         <div class="row">
           <div class="col-sm-12">
             <table class="table table-hover">
@@ -21,5 +22,6 @@
         </div>
       </div>
     </div>
+    <div class="col-md-1"></div>
   </div>
 </div>
