--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,13 +1,29 @@
-<h2><%= t ".title" %></h2>
+<div class="main">
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div class="card padding-md margin-top-md">
+      <h2><%= t ".title" %></h2>
 
-<%= form_for resource, as: resource_name, url: confirmation_path(resource_name),
-  html: {method: :post} do |f| %>
-  <%= devise_error_messages! %>
-  <div class="field">
-    <%= f.email_field :email, placeholder: t("femail"),
-      autofocus: true, value: (resource.pending_reconfirmation? ?
-      resource.unconfirmed_email : resource.email) %><br/>
-    <%= f.submit t(".submit") %>
+      <%= form_for resource, as: resource_name,
+        url: confirmation_path(resource_name),
+        html: {method: :post} do |f| %>
+        <%= devise_error_messages! %>
+
+        <div class="form-group">
+          <%= f.email_field :email, class: "form-control",
+            placeholder: t("femail"), autofocus: true,
+            value: (resource.pending_reconfirmation? ?
+            resource.unconfirmed_email : resource.email) %><br/>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit t(".submit"), class: "btn btn-info" %>
+        </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-<% end %>
-<%= render "devise/shared/links" %>
+  <div class="col-md-3"></div>
+</div>
+</div>
