--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,13 +1,19 @@
 <div class="row">
   <div class="main">
-    <div class="col-md-9">
-      <div class="primary-content">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div class="card padding-md">
         <div class="row">
           <div class="col-sm-12">
-            <%= render "form", product: @product, category: @user %>
+            <h2 class="text-center"><%= t "sell_product" %></h2>
+            <%= render "form", product: @product, category: @supports.category %>
+            <%= link_to t("back"),
+              user_products_path(current_user),
+              class: "btn btn-warning" %>
           </div>
         </div>
       </div>
     </div>
+    <div class="col-md-2"></div>
   </div>
 </div>
