--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,4 +1,5 @@
-<% provide :title, @title %>
+<div class="main">
+<div class="card padding-md">
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
@@ -27,4 +28,6 @@
       <%= will_paginate @users %>
     <% end %>
   </div>
+</div>
+</div>
 </div>
